Added handling of .ini file and better UX

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,20 @@
 ; Options related to the data
 [data]
 ; Number of songs that we want to load
-num-songs = 20 ; a value of 0 means all
+limit-songs = 20    ; a value of 0 means all
 ; Dataset path
 data-dir = /Users/Bernat/Dropbox/UoE/Dissertation/midiFiles/
+; Length of the extracted sequences
+seq-length = 50
+; Index increment for sequence extraction
+inc = 1    ; only try higher values if you really need to reduce the amount of training instances
+; Pad shorter sequences with zeros (at starting positions)
+padding = True
+; Number of MIDI timesteps represented by one timestep of our representation
+reduction-ratio = 128
 ; Options related to the model
 [model]
+; Number of epochs for training
 epochs = 100
+; Number of data instances used for each weight update on training
 batch-size = 12
