Polishing details on var and func naming and .ini handling

--- a/config.ini
+++ b/config.ini
@@ -18,3 +18,5 @@ reduction-ratio = 128
 epochs = 100
 ; Number of data instances used for each weight update on training
 batch-size = 12
+; Path to results folder
+results-dir = /Users/Bernat/Dropbox/UoE/Dissertation/testMidi/
