Added end of song feature

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 ; Options related to the data
 [data]
 ; Number of songs that we want to load
-limit-songs = 20    ; a value of 0 means all
+limit-songs = 1    ; a value of 0 means all
 ; Dataset path
-data-dir = /Users/Bernat/Dropbox/UoE/Dissertation/midiFiles/
+data-dir = /Users/Bernat/Dropbox/UoE/Dissertation/midiFilesTest/
 ; Length of the extracted sequences
 seq-length = 50
 ; Index increment for sequence extraction
@@ -17,6 +17,8 @@ reduction-ratio = 128
 ; Number of epochs for training
 epochs = 100
 ; Number of data instances used for each weight update on training
-batch-size = 12
+batch-size = 1
 ; Path to results folder
 results-dir = /Users/Bernat/Dropbox/UoE/Dissertation/testMidi/
+; Options related to the results that have to be stored
+[results]
