Pushing last modifications

--- a/config.ini
+++ b/config.ini
@@ -21,4 +21,6 @@ batch-size = 1
 ; Options related to the results that have to be stored
 [results]
 ; Path to results folder
-results-dir = /Users/Bernat/Dropbox/UoE/Dissertation/testMidi/
+results-dir = /Users/Bernat/Dropbox/UoE/Dissertation/results/
+; Path to other model
+model-dir = /Users/Bernat/Dropbox/UoE/Dissertation/results/1437628402
